Update title metadata

--- a/public/index.html
+++ b/public/index.html
@@ -262,7 +262,7 @@ a.section-number:hover {
     <script type="text/json">
       {
     "title": "High-Low Frequency Detectors",
-    "description": "A family of early-vision filters reacting to contrasts between spatial gratings of different frequency",
+    "description": "A family of early-vision neurons reacting to directional transitions from high to low spatial frequency.",
     "authors": [
         {
             "author": "Ludwig Schubert",
